[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "0.1.0"
description = "CLI-based background job queue system with workers, retries, backoff, and a dead letter queue."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
queuectl = "queuectl.cli:main"

[tool.setuptools.packages.find]
include = ["queuectl*"]
