[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "0.1.0"
description = "CLI-based background job queue system with workers, retries, backoff, and a dead letter queue."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "sqlalchemy>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
queuectl = "queuectl.cli:main"

[tool.setuptools.packages.find]
include = ["queuectl*"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
